No title for about and contribute page for now, this could be added in the template themselves. Fixed various style issues related to css overflow.
git-svn-id: https://svn.eiffel.com/eiffelstudio-public/trunk@96371 8089f293-4706-0410-a29e-feb5c42a2edf

--- a/Src/web/eiffel-lang.org/site/themes/eiffel-lang/assets/scss/all.scss
+++ b/Src/web/eiffel-lang.org/site/themes/eiffel-lang/assets/scss/all.scss
@@ -724,20 +724,16 @@
 	@include grid(12);
 	overflow: hidden;
 	.holder{
-		overflow: scroll;
-		@include grid(12);
+		margin-left: 0px;
+		margin-right: 0px;
+		overflow-x: auto;
+		overflow-y: hidden;
 	}
 	&.with-first-sidebar, &.with-second-sidebar {
 		@include grid(9);
-		.holder{
-			@include grid(9);
-		}
 	}
 	&.with-first-sidebar.with-second-sidebar {
 		@include grid(4);
-		.holder{
-			@include grid(4);
-		}
 	}
 	.head{
 		overflow: hidden;
@@ -786,7 +782,6 @@
 		margin: 0 0 -46px;
 		ul{
 			@extend %listreset;
-			overflow: hidden;
 			margin: 0 0 0 -73px;
 			li{
 				width: 285px;
@@ -932,6 +927,29 @@
 		}
 	}
 }
+/* Code elements */
+
+code {
+	@include border-radius(4px);
+	display: block;
+	font-family: monospace;
+	white-space: pre-wrap;
+
+	border: solid 1px #ccc;
+	background-color: #FFFFD8;
+	line-height: 1.3;
+	padding: 10px;
+	margin: 2px 0 2px 0;
+}
+code.inline {
+	@include border-radius(0);
+	border: dotted 1px #ddd;
+	display: inline-block;
+	padding: 0 2px 0 2px;
+	margin: 0;
+}
+
+/* ... */
 
 .widget{
 	overflow: hidden;
